Fix QA stories (#260)
* Add useTruncation hook

* some fixes

* remove style

* add styleAs on base component

* some cleanup

* some cleanup

* added tests for styleAs

* don't call onResize after the component is unmounted

* Avoid overriding className on Text components

* Customise Tooltip text

* use text component on Link

* replace unit tests with cypress tests

* Add more tests for Link and Breadcrumbs

* remove unused import

* remove commented code

* cleanup

* remove log

* cleanup on metric styles

* review comments addressed

* Add QA story & backwardsCompat styles

* fix import

* fix metric cy test

* fix import

* polymorphic typing on Text

* default element type in TextProps

* changes on polymorphic types

* cleanup

* cleanup

* Add default on generic Text type

* Create silent-schools-fry.md

* cleanup

* Remove 'marginTop' and 'marginBottom' props

* remove 'expanded' prop from Text; add VELOCITY const; add more tests on Breadcrumbs

* cleanup

* remove tests for expanded

* use Text components in ContactDetails; add QA story

* cleanup

* add cypress tests, remove jest tests

* cleanup

* remove css style

* Delete TruncatableValue.tsx

* use Text components in ContactDetails; add QA story

* remove marginTop and marginBottom props from Text

* use Div in ContentStatus

* add cypress tests, remove jest tests

* add backwardsCompat in Text for lineHeight

* amends on ContactStatus component and QA stories

* Create chatty-bugs-perform.md

* fix text css vars

* add cypress test for link

* Delete Link.spec.tsx

* style fixes on QAContainer

* more style fixes

* default cols=2 on QAContainer

* default cols=2 on QAContainer

* more changes to content-status QA

* revert changes

* more style changes on QA stories

* add backwardsCompat story

* pr comments addressed

* remove unused css file

* add transposeDensity on QACon

--- a/packages/lab/src/metric/MetricContent.css
+++ b/packages/lab/src/metric/MetricContent.css
@@ -1,26 +1,13 @@
 .uitkMetricContent {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-start;
-  padding: 0px;
 }
 
 .uitkMetricContent-value-container {
   display: flex;
   flex-direction: row;
-  align-items: flex-end;
-  gap: 4px;
-}
-
-.uitkMetric-size-large .uitkMetricContent-indicator {
-  padding: 0px 0px 16px;
-}
-.uitkMetric-size-medium .uitkMetricContent-indicator {
-  padding: 0px 0px 11px;
-}
-.uitkMetric-size-small .uitkMetricContent-indicator {
-  padding: 0px 0px 8px;
+  align-items: baseline;
+  gap: calc(var(--uitk-size-unit) / 2);
 }
 
 .uitkMetric-direction-up .uitkMetricContent-indicator {
@@ -51,16 +38,129 @@
   text-align: right;
 }
 
-.backwardsCompat.uitkMetric.uitkMetric-size-small .uitkMetricContent-subvalue {
+/* HORIZONTAL */
+
+/* Size small */
+.uitk-density-medium .backwardsCompat.uitkMetric.uitkMetric-orientation-horizontal.uitkMetric-size-small .uitkMetricContent-subvalue {
+  margin-top: -1px;
+}
+.uitk-density-high .backwardsCompat.uitkMetric.uitkMetric-orientation-horizontal.uitkMetric-size-small .uitkMetricContent-subvalue {
   margin-top: -2px;
 }
-.backwardsCompat.uitkMetric.uitkMetric-size-medium .uitkMetricContent-subvalue {
-  margin-top: -6px;
+.uitk-density-low .backwardsCompat.uitkMetric.uitkMetric-orientation-horizontal.uitkMetric-size-small .uitkMetricContent-subvalue {
+  margin-top: 0px;
 }
-.backwardsCompat.uitkMetric.uitkMetric-size-large .uitkMetricContent-subvalue {
-  margin-top: -10px;
+.uitk-density-touch .backwardsCompat.uitkMetric.uitkMetric-orientation-horizontal.uitkMetric-size-small .uitkMetricContent-subvalue {
+  margin-top: 1px;
 }
 
-.backwardsCompat.uitkMetric-orientation-vertical.uitkMetric .uitkMetricContent-subvalue {
-  margin-top: 0px;
+/* Size medium */
+.uitk-density-medium .backwardsCompat.uitkMetric.uitkMetric-orientation-horizontal.uitkMetric-size-medium .uitkMetricContent-subvalue {
+  margin-top: -4px;
+}
+.uitk-density-high .backwardsCompat.uitkMetric.uitkMetric-orientation-horizontal.uitkMetric-size-medium .uitkMetricContent-subvalue {
+  margin-top: -5px;
+}
+.uitk-density-low .backwardsCompat.uitkMetric.uitkMetric-orientation-horizontal.uitkMetric-size-medium .uitkMetricContent-subvalue {
+  margin-top: -3px;
+}
+.uitk-density-touch .backwardsCompat.uitkMetric.uitkMetric-orientation-horizontal.uitkMetric-size-medium .uitkMetricContent-subvalue {
+  margin-top: -2px;
+}
+
+/* Size large */
+.backwardsCompat.uitkMetric.uitkMetric-orientation-horizontal.uitkMetric-size-large .uitkMetricContent {
+  margin-top: -1px;
+}
+.uitk-density-medium .backwardsCompat.uitkMetric.uitkMetric-orientation-horizontal.uitkMetric-size-large .uitkMetricContent-subvalue {
+  margin-top: -10px;
+}
+.uitk-density-high .backwardsCompat.uitkMetric.uitkMetric-orientation-horizontal.uitkMetric-size-large .uitkMetricContent-subvalue {
+  margin-top: -11px;
+}
+.uitk-density-low .backwardsCompat.uitkMetric.uitkMetric-orientation-horizontal.uitkMetric-size-large .uitkMetricContent-subvalue {
+  margin-top: -9px;
+}
+.uitk-density-touch .backwardsCompat.uitkMetric.uitkMetric-orientation-horizontal.uitkMetric-size-large .uitkMetricContent-subvalue {
+  margin-top: -8px;
+}
+
+/* VERTICAL */
+
+/* Size small */
+.uitk-density-medium .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-small .uitkMetricContent-value-container {
+  margin-top: 2px;
+}
+.uitk-density-high .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-small .uitkMetricContent-value-container {
+  margin-top: 1px;
+}
+.uitk-density-low .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-small .uitkMetricContent-value-container {
+  margin-top: 3px;
+}
+.uitk-density-touch .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-small .uitkMetricContent-value-container {
+  margin-top: 4px;
+}
+.uitk-density-medium .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-small .uitkMetricContent-subvalue {
+  margin-top: 2px;
+}
+.uitk-density-high .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-small .uitkMetricContent-subvalue {
+  margin-top: 2px;
+}
+.uitk-density-low .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-small .uitkMetricContent-subvalue {
+  margin-top: 3px;
+}
+.uitk-density-touch .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-small .uitkMetricContent-subvalue {
+  margin-top: 4px;
+}
+
+/* Size medium */
+.uitk-density-medium .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-medium .uitkMetricContent-value-container {
+  margin-top: 2px;
+}
+.uitk-density-high .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-medium .uitkMetricContent-value-container {
+  margin-top: 1px;
+}
+.uitk-density-low .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-medium .uitkMetricContent-value-container {
+  margin-top: 3px;
+}
+.uitk-density-touch .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-medium .uitkMetricContent-value-container {
+  margin-top: 4px;
+}
+.uitk-density-medium .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-medium .uitkMetricContent-subvalue {
+  margin-top: 2px;
+}
+.uitk-density-high .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-medium .uitkMetricContent-subvalue {
+  margin-top: 2px;
+}
+.uitk-density-low .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-medium .uitkMetricContent-subvalue {
+  margin-top: 3px;
+}
+.uitk-density-touch .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-medium .uitkMetricContent-subvalue {
+  margin-top: 4px;
+}
+
+/* Size large */
+.uitk-density-medium .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-large .uitkMetricContent-value-container {
+  margin-top: 2px;
+}
+.uitk-density-high .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-large .uitkMetricContent-value-container {
+  margin-top: 1px;
+}
+.uitk-density-low .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-large .uitkMetricContent-value-container {
+  margin-top: 3px;
+}
+.uitk-density-touch .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-large .uitkMetricContent-value-container {
+  margin-top: 4px;
+}
+.uitk-density-medium .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-large .uitkMetricContent-subvalue {
+  margin-top: 2px;
+}
+.uitk-density-high .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-large .uitkMetricContent-subvalue {
+  margin-top: 1px;
+}
+.uitk-density-low .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-large .uitkMetricContent-subvalue {
+  margin-top: 3px;
+}
+.uitk-density-touch .backwardsCompat.uitkMetric.uitkMetric-orientation-vertical.uitkMetric-size-large .uitkMetricContent-subvalue {
+  margin-top: 4px;
 }
