--- a/packages/lab/src/typography/Text.css
+++ b/packages/lab/src/typography/Text.css
@@ -9,13 +9,11 @@
 
 /* Main css class */
 .uitkText {
-  font-size: var(--uitk-text-fontSize);
-  line-height: var(--uitk-text-lineHeight-backwardsCompat, var(--uitk-text-lineHeight));
-}
+  --text-lineHeight: var(--uitk-text-lineHeight);
 
-.uitkText-overflow {
-  height: 100%;
-  overflow: auto;
+  color: var(--uitk-text-primary-foreground);
+  font-size: var(--uitk-text-fontSize);
+  line-height: var(--text-lineHeight);
 }
 
 .uitkText-lineClamp {
@@ -30,8 +28,8 @@
 
 h1.uitkText,
 .uitkText-h1.uitkText {
+  --text-lineHeight: var(--uitk-text-h1-lineHeight);
   font-size: var(--uitk-text-h1-fontSize);
-  line-height: var(--uitk-text-lineHeight-backwardsCompat, var(--uitk-text-h1-lineHeight));
   font-weight: var(--uitk-text-h1-fontWeight);
 }
 
@@ -50,8 +48,8 @@ h1.uitkText small,
 
 h2.uitkText,
 .uitkText-h2.uitkText {
+  --text-lineHeight: var(--uitk-text-h2-lineHeight);
   font-size: var(--uitk-text-h2-fontSize);
-  line-height: var(--uitk-text-lineHeight-backwardsCompat, var(--uitk-text-h2-lineHeight));
   font-weight: var(--uitk-text-h2-fontWeight);
 }
 
@@ -69,8 +67,8 @@ h2.uitkText small,
 /* Heading 3 */
 h3.uitkText,
 .uitkText-h3.uitkText {
+  --text-lineHeight: var(--uitk-text-h3-lineHeight);
   font-size: var(--uitk-text-h3-fontSize);
-  line-height: var(--uitk-text-lineHeight-backwardsCompat, var(--uitk-text-h3-lineHeight));
   font-weight: var(--uitk-text-h3-fontWeight);
 }
 
@@ -88,8 +86,8 @@ h3.uitkText small,
 /* Heading 4 */
 h4.uitkText,
 .uitkText-h4.uitkText {
+  --text-lineHeight: var(--uitk-text-h4-lineHeight);
   font-size: var(--uitk-text-h4-fontSize);
-  line-height: var(--uitk-text-lineHeight-backwardsCompat, var(--uitk-text-h4-lineHeight));
   font-weight: var(--uitk-text-h4-fontWeight);
 }
 
@@ -107,35 +105,39 @@ h4.uitkText small,
 /* Label-Caption */
 label.uitkText,
 .uitkText-label {
+  --text-lineHeight: var(--uitk-text-caption-lineHeight);
   font-size: var(--uitk-text-caption-fontSize);
-  line-height: var(--uitk-text-lineHeight-backwardsCompat, var(--uitk-text-caption-lineHeight));
 }
 
 /* Help text */
 .uitkText-helpText.uitkText {
-  font-style: var(--uitk-text-help-fontStyle);
+  --text-lineHeight: var(--uitk-text-help-lineHeight);
   color: var(--uitk-text-secondary-foreground);
+  font-style: var(--uitk-text-help-fontStyle);
   font-size: var(--uitk-text-help-fontSize);
-  line-height: var(--uitk-text-lineHeight-backwardsCompat, var(--uitk-text-help-lineHeight));
 }
 
 /* Figure 1 */
 .uitkText-figure1.uitkText {
+  --text-lineHeight: var(--uitk-text-figure1-lineHeight);
   font-size: var(--uitk-text-figure1-fontSize);
-  line-height: var(--uitk-text-lineHeight-backwardsCompat, var(--uitk-text-figure1-lineHeight));
   font-weight: var(--uitk-text-figure1-fontWeight);
 }
 
 /* Figure 2 */
 .uitkText-figure2.uitkText {
+  --text-lineHeight: var(--uitk-text-figure2-lineHeight);
   font-size: var(--uitk-text-figure2-fontSize);
-  line-height: var(--uitk-text-lineHeight-backwardsCompat, var(--uitk-text-figure2-lineHeight));
   font-weight: var(--uitk-text-figure2-fontWeight);
 }
 
 /* Figure 3 */
 .uitkText-figure3.uitkText {
+  --text-lineHeight: var(--uitk-text-figure3-lineHeight);
   font-size: var(--uitk-text-figure3-fontSize);
-  line-height: var(--uitk-text-lineHeight-backwardsCompat, var(--uitk-text-figure3-lineHeight));
   font-weight: var(--uitk-text-figure3-fontWeight);
+}
+
+.backwardsCompat .uitkText {
+  line-height: 1.3;
 }
